--- a/开发笔记/假数据数组.md
+++ b/开发笔记/假数据数组.md
@@ -1,265 +1,35 @@
-```
-let
- 
-tableData
- 
-=
- 
-ref
-(
-```
+```js
+let tableData = ref(
 
-```
-    
-new
- 
-Array
-(
-20
-).
-fill
-({
-```
+    new Array(20).fill({
 
-```
-        
-companyName
-: 
-'
-```
+        companyName: '无锡一西有限公司',
 
-无锡一西有限公司
+        contractName: '无锡一西有限公司合同',
 
-```
-'
-,
-```
+        serviceContent: ['安全技术咨询类', '委托协助托管类', '安全生产培训类'],
 
-```
-        
-contractName
-: 
-'
-```
+        serviceProcess: [
 
-无锡一西有限公司合同
+            { status: true, value: '初访沟通' },
 
-```
-'
-,
-```
+            { status: false, value: '项目评估' },
 
-```
-        
-serviceContent
-: [
-'
-```
+            { status: false, value: '合同签订' },
 
-安全技术咨询类
+            { status: false, value: '项目实施' },
 
-```
-'
-, 
-'
-```
+            { status: false, value: '服务回访' }
 
-委托协助托管类
-
-```
-'
-, 
-'
-```
-
-安全生产培训类
-
-```
-'
-],
-```
-
-```
-        
-serviceProcess
-: [
-```
-
-```
-            { 
-status
-: 
-true
-, 
-value
-: 
-'
-```
-
-初访沟通
-
-```
-'
- },
-```
-
-```
-            { 
-status
-: 
-false
-, 
-value
-: 
-'
-```
-
-项目评估
-
-```
-'
- },
-```
-
-```
-            { 
-status
-: 
-false
-, 
-value
-: 
-'
-```
-
-合同签订
-
-```
-'
- },
-```
-
-```
-            { 
-status
-: 
-false
-, 
-value
-: 
-'
-```
-
-项目实施
-
-```
-'
- },
-```
-
-```
-            { 
-status
-: 
-false
-, 
-value
-: 
-'
-```
-
-服务回访
-
-```
-'
- }
-```
-
-```
         ],
-```
 
-```
-        
-principal
-: 
-'
-```
+        principal: '赵老四',
 
-赵老四
+        projectParticipants: '赵老四  刘老五  李老六赵老四  刘老五  李老六赵老四  刘老五  李老六',
 
-```
-'
-,
-```
+        status: '未开始'
 
-```
-        
-projectParticipants
-: 
-'
-```
-
-赵老四
-
-```
-  
-```
-
-刘老五
-
-```
-  
-```
-
-李老六赵老四
-
-```
-  
-```
-
-刘老五
-
-```
-  
-```
-
-李老六赵老四
-
-```
-  
-```
-
-刘老五
-
-```
-  
-```
-
-李老六
-
-```
-'
-,
-```
-
-```
-        
-status
-: 
-'
-```
-
-未开始
-
-```
-'
-```
-
-```
     })
-```
 
-```
 )
 ```
