--- a/开发笔记/动态表头.md
+++ b/开发笔记/动态表头.md
@@ -1,3 +1,2 @@
-![Exported image](开发笔记/附件/Exported%20image%2020240218135514-0.png) ![Exported image](开发笔记/附件/Exported%20image%2020240218135514-1.png)
-
 表内数据的字段名需要对应表头中的prop
+![[Exported image 20240218135514-1 1.png]]![[Exported image 20240218135514-0 2.png]]
