--- a/开发笔记/头像堆叠.md
+++ b/开发笔记/头像堆叠.md
@@ -1,192 +1,53 @@
-```
- 
-.people
- {
-```
+```css
+  .people {
 
-```
-          display: 
-flex
-;
-```
+          display: flex;
 
-```
-          flex-wrap: 
-wrap
-;
-```
+          flex-wrap: wrap;
 
-```
-          justify-content: 
-center
-;
-```
+          justify-content: center;
 
-```
-          
-div
- {
-```
+          div {
 
-```
-            margin-bottom: 
-10
-px
-;
-```
+            margin-bottom: 10px;
 
-```
-            margin-right: 
-1
-px
-;
-```
+            margin-right: 1px;
 
-```
-            width: 
-20
-px
-;
-```
+            width: 20px;
 
-```
-            height: 
-25
-px
-;
-```
+            height: 25px;
 
-```
-            text-align: 
-center
-;
-```
+            text-align: center;
 
-```
-            line-height: 
-25
-px
-;
-```
+            line-height: 25px;
 
-```
-            color: 
-#fff
-;
-```
+            color: #fff;
 
-```
-            
-span
- {
-```
+            span {
 
-```
-              display: 
-inline-block
-;
-```
+              display: inline-block;
 
-```
-              width: 
-25
-px
-;
-```
+              width: 25px;
 
-```
-              height: 
-25
-px
-;
-```
+              height: 25px;
 
-```
-              background: 
-$bg-color-orange
-;
-```
+              background: $bg-color-orange;
 
-```
-              border-radius: 
-50
-%
-;
-```
+              border-radius: 50%;
 
-```
-              border: 
-2
-px
- 
-solid
- 
-#fff
-;
-```
+              border: 2px solid #fff;
 
-```
             }
-```
 
-```
           }
-
-
-
-
-
 ```
 
-```
-<
-div
- 
-class
-=
-"people"
->
-```
+```html
+<div class="people">
 
-```
-            <
-div
-><
-span
->
-```
+            <div><span>人</span></div>
 
-人
+            <div><span>人</span></div>
 
-```
-</
-span
-></
-div
->
-```
-
-```
-            <
-div
-><
-span
->
-```
-
-人
-
-```
-</
-span
-></
-div
->
-```
-
-```
-          </
-div
->
-
+          </div>
 ```
