--- a/开发笔记/字符长度计算（中文算两个字符）.md
+++ b/开发笔记/字符长度计算（中文算两个字符）.md
@@ -1,146 +1,41 @@
-```
-export
- 
-const
- 
-getStringLength
- 
-=
- (
-e
-) 
-=>
- {
-```
+```js
+export const getStringLength = (e) => {
 
-```
-  
-let
- [
-length
-, 
-cn
-, 
-en
-] 
-=
- [
-0
-, 
-0
-, 
-0
-];
-```
+  let [length, cn, en] = [0, 0, 0];
 
-```
-  
-Array
-.
-from
-(
-e
-).
-map
-((
-item
-) 
-=>
- {
-```
+  Array.from(e).map((item) => {
 
-```
-    
-if
- (
-e
-.
-charAt
-(
-item
-).
-match
-(
-/
-[\u4e00-\u9fa5]
-/
-g
-)) {
-```
+    if (e.charAt(item).match(/[\u4e00-\u9fa5]/g)) {
 
-```
-      
-length
- 
-+=
- 
-2
-;
-```
+      length += 2;
 
-```
-      
-cn
-++
-;
-```
+      cn++;
 
-```
-    } 
-else
- {
-```
+    } else {
 
-```
-      
-length
- 
-+=
- 
-1
-;
-```
+      length += 1;
 
-```
-      
-en
-++
-;
-```
+      en++;
 
-```
     }
-```
 
-```
   });
-```
 
-```
-  
-return
- 
-length
-;
-```
+  return length;
 
-```
 };
-
-
-
-```
 
 {
 
-message: '不允许超过30个汉字或60个英文',
+            message: '不允许超过30个汉字或60个英文',
 
-trigger: ['change', 'blur'],
+            trigger: ['change', 'blur'],
 
-validator(rule, value, callback) {
+            validator(rule, value, callback) {
 
-return value.replace(/[^\x00-\xff]/g, 'sb').length <= 60
+              return value.replace(/[^\x00-\xff]/g, 'sb').length <= 60
 
-}
+            }
 
-}
+          }
+```
