--- a/开发笔记/快排.md
+++ b/开发笔记/快排.md
@@ -1,353 +1,65 @@
-```
-    
-sortArray
-(
-nums
-) {
-```
+```js
+    sortArray(nums) {
 
-```
-      
-this
-.
-quickSort
-(
-0
-, 
-nums
-.
-length
- 
--
- 
-1
-, 
-nums
-)
-```
+      this.quickSort(0, nums.length - 1, nums)
 
-```
-      
-return
- 
-nums
-```
+      return nums
 
-```
     },
-```
 
-```
-    
-quickSort
-(
-start
-, 
-end
-, 
-arr
-) {
-```
+    quickSort(start, end, arr) {
 
-```
-      
-let
- 
-self
- 
-=
- 
-this
-```
+      let self = this
 
-```
-      
-if
- (
-start
- 
-<
- 
-end
-) {
-```
+      if (start < end) {
 
-```
-        
-console
-.
-log
-(
-"this.numbs"
-,
-this
-.
-numbs
-);
-```
+        console.log("this.numbs",this.numbs);
 
-```
-        
-console
-.
-log
-(
-"this.arrss"
-,
-arr
-);
-```
+        console.log("this.arrss",arr);
 
-```
-        
-const
- 
-mid
- 
-=
- 
-self
-.
-sort
-(
-start
-, 
-end
-, 
-arr
-)
-```
+        const mid = self.sort(start, end, arr)
 
-```
-        
-console
-.
-log
-(
-"mid"
-,
-mid
-);
-```
+        console.log("mid",mid);
 
-```
-        
-self
-.
-quickSort
-(
-start
-, 
-mid
- 
--
- 
-1
-, 
-arr
-)
-```
+        self.quickSort(start, mid - 1, arr)
 
-```
-        
-self
-.
-quickSort
-(
-mid
- 
-+
- 
-1
-, 
-end
-, 
-arr
-)
-```
+        self.quickSort(mid + 1, end, arr)
 
-```
       }
-```
 
-```
     },
-```
 
-```
-    
-sort
-(
-start
-, 
-end
-, 
-arr
-) {
-```
+    sort(start, end, arr) {
 
-```
-      
-const
- 
-base
- 
-=
- 
-arr
-[
-start
-]
-```
+      const base = arr[start]
 
-```
-      
-let
- 
-left
- 
-=
- 
-start
-```
+      let left = start
 
-```
-      
-let
- 
-right
- 
-=
- 
-end
-```
+      let right = end
 
-```
-      
-while
- (
-left
- 
-!==
- 
-right
-) {
-```
+      while (left !== right) {
 
-```
-        
-while
- (
-arr
-[
-right
-] 
->=
- 
-base
- 
-&&
- 
-right
- 
->
- 
-left
-) {
-```
+        while (arr[right] >= base && right > left) {
 
-```
-          
-right
---
-```
+          right--
 
-```
         }
-```
 
-```
-        
-arr
-[
-left
-] 
-=
- 
-arr
-[
-right
-]
-```
+        arr[left] = arr[right]
 
-```
-        
-while
- (
-arr
-[
-left
-] 
-<=
- 
-base
- 
-&&
- 
-right
- 
->
- 
-left
-) {
-```
+        while (arr[left] <= base && right > left) {
 
-```
-          
-left
-++
-```
+          left++
 
-```
         }
-```
 
-```
-        
-arr
-[
-right
-] 
-=
- 
-arr
-[
-left
-]
-```
+        arr[right] = arr[left]
 
-```
       }
-```
 
-```
-      
-arr
-[
-left
-] 
-=
- 
-base
-```
+      arr[left] = base
 
-```
-      
-return
- 
-left
-```
+      return left
 
-```
     },
 ```
