--- a/开发笔记/成员选择穿梭框组件.md
+++ b/开发笔记/成员选择穿梭框组件.md
@@ -1,1397 +1,318 @@
-穿梭框全部代码，作为子组件。
+```js
+穿梭框全部代码，作为子组件。userMailList 为获取全部人员  
+<template>
 
-```
-u
-serMailList
- 
-```
+  <el-dialog
 
-为获取全部人员
+    title="人员选择"
 
-```
-￼
-<
-template
->
-```
+    v-model="show"
 
-```
-  <
-el-dialog
-```
+    width="640px"
 
-```
-    
-title
-=
-"
-```
+    :close-on-click-modal="false"
 
-人员选择
+    center
 
-```
-"
-```
+    @close="clearitems"
 
-```
-    
-v-model
-=
-"
-show
-"
-```
-
-```
-    
-width
-=
-"640px"
-```
-
-```
-    :
-close-on-click-modal
-=
-"
-false
-"
-```
-
-```
-    
-center
-```
-
-```
-    @
-close
-=
-"
-clearitems
-"
-```
-
-```
   >
-```
 
-```
-    <
-div
- 
-class
-=
-"peopleCheck"
->
-```
+    <div class="peopleCheck">
 
-```
-      <
-el-transfer
-```
+      <el-transfer
 
-```
-        
-v-model
-=
-"
-yetPeople
-"
-```
+        v-model="yetPeople"
 
-```
-        
-filterable
-```
+        filterable
 
-```
-        :
-filter-method
-=
-"
-filterMethod
-"
-```
+        :filter-method="filterMethod"
 
-```
-        
-filter-placeholder
-=
-"
-```
+        filter-placeholder="请输入人员拼音"
 
-请输入人员拼音
+        :data="allPeople"
 
-```
-"
-```
+        @left-check-change="changeLeftPeople"
 
-```
-        :
-data
-=
-"
-allPeople
-"
-```
+        :titles="['未选人员', '已选人员']"
 
-```
-        @
-left-check-change
-=
-"
-changeLeftPeople
-"
-```
-
-```
-        :
-titles
-=
-"
-[
-'
-```
-
-未选人员
-
-```
-'
-, 
-'
-```
-
-已选人员
-
-```
-'
-]
-"
-```
-
-```
       />
-```
 
-```
-    </
-div
->
-```
+    </div>
 
-```
-    <
-template
- #
-footer
->
-```
+    <template #footer>
 
-```
-      <
-span
- 
-class
-=
-"dialog-footer"
->
-```
+      <span class="dialog-footer">
 
-```
-        <
-el-button
- @
-click
-=
-"
-check
-"
->
-```
+        <el-button @click="check">确认</el-button>
 
-确认
+      </span>
 
-```
-</
-el-button
->
-```
+    </template>
 
-```
-      </
-span
->
-```
+  </el-dialog>
 
-```
-    </
-template
->
-```
+</template>
 
-```
-  </
-el-dialog
->
-```
+<script setup>
 
-```
-</
-template
->
-```
+import {
 
-```
-<
-script
- 
-setup
->
-```
+  ref,
 
-```
-import
- {
-```
+  reactive,
 
-```
-  
-ref
-,
-```
+  onMounted,
 
-```
-  
-reactive
-,
-```
+  defineEmits,
 
-```
-  
-onMounted
-,
-```
+  defineProps,
 
-```
-  
-defineEmits
-,
-```
+  defineExpose,
 
-```
-  
-defineProps
-,
-```
+  watch,
 
-```
-  
-defineExpose
-,
-```
+} from "vue";
 
-```
-  
-watch
-,
-```
+import { userMailList } from "@/http/api/workbench";
 
-```
-} 
-from
- 
-"vue"
-;
-```
+const emits = defineEmits(["clearitems", "backData"]);
 
-```
-import
- { 
-userMailList
- } 
-from
- 
-"@/http/api/workbench"
-;
-```
+const props = defineProps({
 
-```
-const
- 
-emits
- 
-=
- 
-defineEmits
-([
-"clearitems"
-, 
-"backData"
-]);
-```
+  choosePeople: {
 
-```
-const
- 
-props
- 
-=
- 
-defineProps
-({
-```
+    type: Array,
 
-```
-  
-choosePeople
-: {
-```
+    default: () => {
 
-```
-    
-type
-: 
-Array
-,
-```
+      return [];
 
-```
-    
-default
-: () 
-=>
- {
-```
-
-```
-      
-return
- [];
-```
-
-```
     },
-```
 
-```
   },
-```
 
-```
-  
-type
-: {
-```
+  type: {
 
-```
-    
-type
-: 
-String
-,
-```
+    type: String,
 
-```
-    
-default
-: () 
-=>
- {
-```
+    default: () => {
 
-```
-      
-return
- 
-""
-;
-```
+      return "";
 
-```
     },
-```
 
-```
   },
-```
 
-```
 });
-```
 
-```
-let
- 
-show
- 
-=
- 
-ref
-(
-true
-);
-```
+let show = ref(true);
 
-```
-let
- 
-yetPeople
- 
-=
- 
-ref
-([]);
-```
+let yetPeople = ref([]);
 
-```
-let
- 
-allPeople
- 
-=
- 
-ref
-([]);
-```
+let allPeople = ref([]);
 
-```
-let
- 
-leftPeople
- 
-=
- 
-ref
-(
-""
-);
-```
+let leftPeople = ref("");
 
-```
-//
-```
+//拉取数据
 
-_拉取数据_
+const generateData = async () => {
 
-```
-const
- 
-generateData
- 
-=
- 
-async
- () 
-=>
- {
-```
+  let res = await userMailList({});
 
-```
-  
-let
- 
-res
- 
-=
- 
-await
- 
-userMailList
-({});
-```
+  let peopleList = res.data;
 
-```
-  
-let
- 
-peopleList
- 
-=
- 
-res
-.
-data
-;
-```
+  const datain = [];
 
-```
-  
-const
- 
-datain
- 
-=
- [];
-```
+  peopleList.forEach((item, index) => {
 
-```
-  
-peopleList
-.
-forEach
-((
-item
-, 
-index
-) 
-=>
- {
-```
+    datain.push({
 
-```
-    
-datain
-.
-push
-({
-```
+      label: item.userName,
 
-```
-      
-label
-: 
-item
-.
-userName
-,
-```
+      key: item.accountId,
 
-```
-      
-key
-: 
-item
-.
-accountId
-,
-```
+      spell: item.userName,
 
-```
-      
-spell
-: 
-item
-.
-userName
-,
-```
+      disabled: item.isMain === true ? true : false,
 
-```
-      
-disabled
-: 
-item
-.
-isMain
- 
-===
- 
-true
- 
-?
- 
-true
- 
-:
- 
-false
-,
-```
+      isAdmin: item.isMain,
 
-```
-      
-isAdmin
-: 
-item
-.
-isMain
-,
-```
-
-```
     });
-```
 
-```
   });
-```
 
-```
-  
-allPeople
-.
-value
- 
-=
- 
-datain
-;
-```
+  allPeople.value = datain;
 
-```
-  
-yetPeople
-.
-value
- 
-=
- 
-JSON
-.
-parse
-(
-JSON
-.
-stringify
-(
-props
-.
-choosePeople
-));
-```
+  yetPeople.value = JSON.parse(JSON.stringify(props.choosePeople));
 
-```
 };
-```
 
-```
-//
-```
+//确认
 
-_确认_
+const check = () => {
 
-```
-const
- 
-check
- 
-=
- () 
-=>
- {
-```
+  emits("backData", yetPeople.value);
 
-```
-  
-emits
-(
-"backData"
-, 
-yetPeople
-.
-value
-);
-```
+  clearitems();
 
-```
-  
-clearitems
-();
-```
-
-```
 };
-```
 
-```
-//
-```
+//左侧选择的人员监听
 
-_左侧选择的人员监听_
+const changeLeftPeople = (query, item) => {
 
-```
-const
- 
-changeLeftPeople
- 
-=
- (
-query
-, 
-item
-) 
-=>
- {
-```
+  leftPeople.value = query;
 
-```
-  
-leftPeople
-.
-value
- 
-=
- 
-query
-;
-```
-
-```
 };
-```
 
-```
-//
-```
+//退出
 
-_退出_
+const clearitems = () => {
 
-```
-const
- 
-clearitems
- 
-=
- () 
-=>
- {
-```
+  emits("clearitems");
 
-```
-  
-emits
-(
-"clearitems"
-);
-```
-
-```
 };
-```
 
-```
-//
-```
+//自定义搜索方法
 
-_自定义搜索方法_
+const filterMethod = (query, item) => {
 
-```
-const
- 
-filterMethod
- 
-=
- (
-query
-, 
-item
-) 
-=>
- {
-```
+  return item.spell.indexOf(query) > -1;
 
-```
-  
-return
- 
-item
-.
-spell
-.
-indexOf
-(
-query
-) 
->
- 
--
-1
-;
-```
-
-```
 };
-```
 
-```
-// 
-```
+// 监听
 
-_监听_
+//监听左侧人员选择状态
 
-```
-//
-```
+watch(leftPeople, (nVal) => {
 
-_监听左侧人员选择状态_
+  if (leftPeople.value.length > 0 && props.type == "limt1") {
 
-```
-watch
-(
-leftPeople
-, (
-nVal
-) 
-=>
- {
-```
+    allPeople.value.forEach((item, index) => {
 
-```
-  
-if
- (
-leftPeople
-.
-value
-.
-length
- 
->
- 
-0
- 
-&&
- 
-props
-.
-type
- 
-==
- 
-"limt1"
-) {
-```
+      if (item.key != leftPeople.value) {
 
-```
-    
-allPeople
-.
-value
-.
-forEach
-((
-item
-, 
-index
-) 
-=>
- {
-```
+        item.disabled = true;
 
-```
-      
-if
- (
-item
-.
-key
- 
-!=
- 
-leftPeople
-.
-value
-) {
-```
-
-```
-        
-item
-.
-disabled
- 
-=
- 
-true
-;
-```
-
-```
       }
-```
 
-```
     });
-```
 
-```
-  } 
-else
- 
-if
- (
-props
-.
-type
- 
-==
- 
-"limt1"
-) {
-```
+  } else if (props.type == "limt1") {
 
-```
-    
-allPeople
-.
-value
-.
-forEach
-((
-item
-, 
-index
-) 
-=>
- {
-```
+    allPeople.value.forEach((item, index) => {
 
-```
-      
-if
- (
-item
-.
-isAdmin
- 
-!==
- 
-true
-) {
-```
+      if (item.isAdmin !== true) {
 
-```
-        
-item
-.
-disabled
- 
-=
- 
-false
-;
-```
+        item.disabled = false;
 
-```
       }
-```
 
-```
     });
-```
 
-```
   }
-```
 
-```
 });
-```
 
-```
-//
-```
+//监听右侧是否有已选择的人员
 
-_监听右侧是否有已选择的人员_
+watch(yetPeople, (nVal) => {
 
-```
-watch
-(
-yetPeople
-, (
-nVal
-) 
-=>
- {
-```
+  if (yetPeople.value.length == 0 && props.type == "limt1") {
 
-```
-  
-if
- (
-yetPeople
-.
-value
-.
-length
- 
-==
- 
-0
- 
-&&
- 
-props
-.
-type
- 
-==
- 
-"limt1"
-) {
-```
+    allPeople.value.forEach((item, index) => {
 
-```
-    
-allPeople
-.
-value
-.
-forEach
-((
-item
-, 
-index
-) 
-=>
- {
-```
+      if (item.isAdmin !== true) {
 
-```
-      
-if
- (
-item
-.
-isAdmin
- 
-!==
- 
-true
-) {
-```
+        item.disabled = false;
 
-```
-        
-item
-.
-disabled
- 
-=
- 
-false
-;
-```
-
-```
       }
-```
 
-```
     });
-```
 
-```
   }
-```
 
-```
 });
-```
 
-```
-onMounted
-(() 
-=>
- {
-```
+onMounted(() => {
 
-```
-  
-generateData
-();
-```
+  generateData();
 
-```
 });
-```
 
-```
-</
-script
->
-```
+</script>
 
-```
-<
-style
- 
-lang
-=
-"scss"
- 
-scoped
->
-```
+<style lang="scss" scoped>
 
-```
-.peopleCheck
- {
-```
+.peopleCheck {
 
-```
-  height: 
-500
-px
-;
-```
+  height: 500px;
 
-```
-  ::
-v-deep
-(
-.el-transfer-panel__body
-) {
-```
+  ::v-deep(.el-transfer-panel__body) {
 
-```
-    height: 
-350
-px
-;
-```
+    height: 350px;
 
-```
   }
-```
 
-```
-  ::v-deep(
-.el-transfer-panel__list.is-filterable
-) {
-```
+  ::v-deep(.el-transfer-panel__list.is-filterable) {
 
-```
-    height: 
-350
-px
-;
-```
+    height: 350px;
 
-```
   }
-```
 
-```
 }
+
+</style>
 ```
 
-```
-</
-style
->
-```
+父组件html
 
-父组件
+```html
+<PeopleCheck
 
-```
-html
-```
+ref="refPeopleCheck"
 
-```
-￼
-<
-PeopleCheck
-```
+v-if="checkPeopleCheck"
 
-```
-ref
-=
-"refPeopleCheck"
-```
+:choosePeople="choosePeople" 已选的人员的ID数组
 
-```
-v-if
-=
-"
-checkPeopleCheck
-"
-```
+type="limt1"                 打开只能从左侧选择一个人的模式
 
-```
-:
-choosePeople
-=
-"
-choosePeople
-"
- 
-```
+@backData="backData"         回显
 
-已选的人员的
+@clearitems="clearitems"     关闭
 
-```
-ID
-```
-
-数组
-
-```
-type
-=
-"limt1"
-                 
-```
-
-打开只能从左侧选择一个人的模式
-
-```
-@
-backData
-=
-"
-backData
-"
-         
-```
-
-回显
-
-```
-@
-clearitems
-=
-"
-clearitems
-"
-     
-```
-
-关闭
-
-```
     />
 ```
 
-```
-//
-```
+```js
+//↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓成员选择组件↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓//
 
-_↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓__成员选择组件__↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓_
+//打开成员选择
 
-```
-//
-```
+const peopleCheckShow = async (row) => {
 
-```
-//
-```
+  //已选择的人
 
-_打开成员选择_
+  choosePeople.value = {{子组件中peopleList的key相对应 }}
 
-```
-const
- 
-peopleCheckShow
- 
-=
- 
-async
- (
-row
-) 
-=>
- {
-```
+  checkPeopleCheck.value = true;
 
-```
-  
-//
-```
-
-已选择的人
-
-```
-  
-choosePeople
-.
-value
- 
-=
- 
-```
-
-{{子组件中
-
-```
-peopleList
-```
-
-的
-
-```
-key
-```
-
-相对应 }}
-
-```
-  
-checkPeopleCheck
-.
-value
- 
-=
- 
-true
-;
-```
-
-```
 };
-```
 
-```
-//
-```
+//成员选择回显的数据
 
-_成员选择回显的数据_
+const backData = (data) => {};
 
-```
-const
- 
-backData
- 
-=
- (
-data
-) 
-=>
- {};
-```
+//关闭
 
-```
-//
-```
+const clearitems = (row) => {
 
-_关闭_
+  checkPeopleCheck.value = false;
 
-```
-const
- 
-clearitems
- 
-=
- (
-row
-) 
-=>
- {
-```
-
-```
-  
-checkPeopleCheck
-.
-value
- 
-=
- 
-false
-;
-```
-
-```
 };
-```
 
-```
-//
-```
-
-_↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑__成员选择组件__↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑_
-
-```
-//
+//↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑成员选择组件↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑//
 ```
