--- a/开发笔记/计算时间差.md
+++ b/开发笔记/计算时间差.md
@@ -1,715 +1,97 @@
+```js
 //计算时间差
 
-```
- 
-timeChange
-(
-data1
-, 
-data2
-) {
-```
+ timeChange(data1, data2) {
 
-```
-      
-let
- 
-dateBegin
- 
-=
- 
-new
- 
-Date
-(
-data2
-.
-replace
-(
-/
--
-/
-g
-, 
-"/"
-));
-```
+      let dateBegin = new Date(data2.replace(/-/g, "/"));
 
-```
-      
-let
- 
-dateEnd
- 
-=
- 
-new
- 
-Date
-(
-data1
-.
-replace
-(
-/
--
-/
-g
-, 
-"/"
-));
-```
+      let dateEnd = new Date(data1.replace(/-/g, "/"));
 
-```
-      
-let
- 
-dateDiff
- 
-=
- 
-dateEnd
-.
-getTime
-() 
--
- 
-dateBegin
-.
-getTime
-(); 
-//
-```
+      let dateDiff = dateEnd.getTime() - dateBegin.getTime(); //时间差的毫秒数
 
-_时间差的毫秒数_
+      let dayDiff = Math.floor(dateDiff / (24 * 3600 * 1000)); //计算出相差天数
 
-```
-      
-let
- 
-dayDiff
- 
-=
- 
-Math
-.
-floor
-(
-dateDiff
- 
-/
- (
-24
- 
-*
- 
-3600
- 
-*
- 
-1000
-)); 
-//
-```
+      let leave1 = dateDiff % (24 * 3600 * 1000); //计算天数后剩余的毫秒数
 
-_计算出相差天数_
+      let hours = Math.floor(leave1 / (3600 * 1000)); //计算出小时数
 
-```
-      
-let
- 
-leave1
- 
-=
- 
-dateDiff
- 
-%
- (
-24
- 
-*
- 
-3600
- 
-*
- 
-1000
-); 
-//
-```
+      //计算相差分钟数
 
-_计算天数后剩余的毫秒数_
+      let leave2 = leave1 % (3600 * 1000); //计算小时数后剩余的毫秒数
 
-```
-      
-let
- 
-hours
- 
-=
- 
-Math
-.
-floor
-(
-leave1
- 
-/
- (
-3600
- 
-*
- 
-1000
-)); 
-//
-```
+      let minutes = Math.floor(leave2 / (60 * 1000)); //计算相差分钟数
 
-_计算出小时数_
+      //计算相差秒数
 
-```
-      
-//
-```
+      let leave3 = leave2 % (60 * 1000); //计算分钟数后剩余的毫秒数
 
-_计算相差分钟数_
+      let seconds = Math.round(leave3 / 1000);
 
-```
-      
-let
- 
-leave2
- 
-=
- 
-leave1
- 
-%
- (
-3600
- 
-*
- 
-1000
-); 
-//
-```
+      console.log(
 
-_计算小时数后剩余的毫秒数_
+        " 相差 " +
 
-```
-      
-let
- 
-minutes
- 
-=
- 
-Math
-.
-floor
-(
-leave2
- 
-/
- (
-60
- 
-*
- 
-1000
-)); 
-//
-```
+          dayDiff +
 
-_计算相差分钟数_
+          "天 " +
 
-```
-      
-//
-```
+          hours +
 
-_计算相差秒数_
+          "小时 " +
 
-```
-      
-let
- 
-leave3
- 
-=
- 
-leave2
- 
-%
- (
-60
- 
-*
- 
-1000
-); 
-//
-```
+          minutes +
 
-_计算分钟数后剩余的毫秒数_
+          " 分钟" +
 
-```
-      
-let
- 
-seconds
- 
-=
- 
-Math
-.
-round
-(
-leave3
- 
-/
- 
-1000
-);
-```
+          seconds +
 
-```
-      
-console
-.
-log
-(
-```
+          " 秒"
 
-```
-        
-" 
-```
-
-相差
-
-```
- "
- 
-+
-```
-
-```
-          
-dayDiff
- 
-+
-```
-
-```
-          
-"
-```
-
-天
-
-```
- "
- 
-+
-```
-
-```
-          
-hours
- 
-+
-```
-
-```
-          
-"
-```
-
-小时
-
-```
- "
- 
-+
-```
-
-```
-          
-minutes
- 
-+
-```
-
-```
-          
-" 
-```
-
-分钟
-
-```
-"
- 
-+
-```
-
-```
-          
-seconds
- 
-+
-```
-
-```
-          
-" 
-```
-
-秒
-
-```
-"
-```
-
-```
       );
-```
 
-```
     },
 
+//计算时间
 
+const timeChange = (data1) => {
 
+  let dateBegin = new Date(data1.replace(/-/g, "/"));
 
+  let dateEnd = Date.now();
 
-```
+  let dateDiff = dateEnd - dateBegin.getTime(); //时间差的毫秒数
 
-```
-//
-```
+  let dayDiff = Math.floor(dateDiff / (24 * 3600 * 1000)) + 1; //计算出相差天数
 
-_计算时间_
+  if (dayDiff > 30) {
 
-```
-const
- 
-timeChange
- 
-=
- (
-data1
-) 
-=>
- {
-```
+    return data1.split(" ")[0];
 
-```
-  
-let
- 
-dateBegin
- 
-=
- 
-new
- 
-Date
-(
-data1
-.
-replace
-(
-/-/
-g
-, 
-"/"
-));
-```
+  } else if (dayDiff == 1) {
 
-```
-  
-let
- 
-dateEnd
- 
-=
- 
-Date
-.
-now
-();
-```
+    if (Math.floor(dateDiff / (3600 * 1000)) == 0) {
 
-```
-  
-let
- 
-dateDiff
- 
-=
- 
-dateEnd
- 
--
- 
-dateBegin
-.
-getTime
-(); 
-//
-```
+      if (Math.floor(dateDiff / (60 * 1000)) == 0) {
 
-_时间差的毫秒数_
+        return "刚刚";
 
-```
-  
-let
- 
-dayDiff
- 
-=
- 
-Math
-.
-floor
-(
-dateDiff
- 
-/
- (
-24
- 
-*
- 
-3600
- 
-*
- 
-1000
-)) 
-+
- 
-1
-; 
-//
-```
+      } else {
 
-_计算出相差天数_
+        return Math.floor(dateDiff / (60 * 1000)) + "分钟前";
 
-```
-  
-if
- (
-dayDiff
- 
->
- 
-30
-) {
-```
-
-```
-    
-return
- 
-data1
-.
-split
-(
-" "
-)[
-0
-];
-```
-
-```
-  } 
-else
- 
-if
- (
-dayDiff
- 
-==
- 
-1
-) {
-```
-
-```
-    
-if
- (
-Math
-.
-floor
-(
-dateDiff
- 
-/
- (
-3600
- 
-*
- 
-1000
-)) 
-==
- 
-0
-) {
-```
-
-```
-      
-if
- (
-Math
-.
-floor
-(
-dateDiff
- 
-/
- (
-60
- 
-*
- 
-1000
-)) 
-==
- 
-0
-) {
-```
-
-```
-        
-return
- 
-"
-```
-
-刚刚
-
-```
-"
-;
-```
-
-```
-      } 
-else
- {
-```
-
-```
-        
-return
- 
-Math
-.
-floor
-(
-dateDiff
- 
-/
- (
-60
- 
-*
- 
-1000
-)) 
-+
- 
-"
-```
-
-分钟前
-
-```
-"
-;
-```
-
-```
       }
-```
 
-```
-    } 
-else
- {
-```
+    } else {
 
-```
-      
-return
- 
-Math
-.
-floor
-(
-dateDiff
- 
-/
- (
-3600
- 
-*
- 
-1000
-)) 
-+
- 
-"
-```
+      return Math.floor(dateDiff / (3600 * 1000)) + "小时前";
 
-小时前
-
-```
-"
-;
-```
-
-```
     }
-```
 
-```
-  } 
-else
- {
-```
+  } else {
 
-```
-    
-return
- 
-dayDiff
- 
-+
- 
-"
-```
+    return dayDiff + "天前";
 
-天前
-
-```
-"
-;
-```
-
-```
   }
-```
 
-```
 };
-
 ```
