--- a/开发笔记/选中改变样式.md
+++ b/开发笔记/选中改变样式.md
@@ -1,17 +1,17 @@
-==data里==
+data里
 
-==isActive:-1,==
+isActive:-1,
 
-==method里==
+method里
 
-==checkedItem(index){==
+checkedItem(index){
 
-==this.isActive=index;==
+this.isActive=index;
 
-==},==
+},
 
-==页面里==
+页面里
 
-==<div v-for="(item,index) in nameoptions"== ==class="====class====名===="== ==:class="{新加的====class====样式:index==isActive}"==
+<div v-for="(item,index) in nameoptions" class="class名" :class="{新加的class样式:index==isActive}"
 
-==@click="checkItem(index)>{{item.name}}</div>==
+@click="checkItem(index)>{{item.name}}</div>
