--- a/开发笔记/动态颜色样式.md
+++ b/开发笔记/动态颜色样式.md
@@ -1,131 +1,31 @@
-```
- <
-div
-```
+```js
+ <div
 
-```
-        
-v-for
-=
-"
-(
-item
-, 
-index
-) 
-in
- 
-roleList
-"
-```
+        v-for="(item, index) in roleList"
 
-```
-        :
-key
-=
-"
-index
-"
-```
+        :key="index"
 
-```
-        
-class
-=
-"card"
-```
+        class="card"
 
-```
-        :
-style
-=
-"
-randomRgb
-(
-index
-)
-"
-```
+        :style="randomRgb(index)"
 
-```
       >
 
+ randomRgb(index) {
 
+      let colorList = [
 
+        { background: "rgba(0, 199, 190, 0.1)" },
 
+        { background: "rgba(0, 122, 255, 0.1)" },
 
+        { background: "rgba(175, 82, 222, 0.1)" },
 
-```
+        { background: "rgba(52, 199, 89, 0.1)" },
 
-```
- 
-randomRgb
-(
-index
-) {
-```
-
-```
-      
-let
- 
-colorList
- 
-=
- [
-```
-
-```
-        { 
-background
-: 
-"rgba(0, 199, 190, 0.1)"
- },
-```
-
-```
-        { 
-background
-: 
-"rgba(0, 122, 255, 0.1)"
- },
-```
-
-```
-        { 
-background
-: 
-"rgba(175, 82, 222, 0.1)"
- },
-```
-
-```
-        { 
-background
-: 
-"rgba(52, 199, 89, 0.1)"
- },
-```
-
-```
       ];
-```
 
-```
-      
-return
- 
-colorList
-[
-index
- 
-%
- 
-4
-];
-```
+      return colorList[index % 4];
 
-```
     },
-
 ```
