--- a/开发笔记/手机号身份证.md
+++ b/开发笔记/手机号身份证.md
@@ -1,265 +1,45 @@
-r
+reg.js页面  
 
-```
-eg.js
-```
+```js
+//判断是否是手机号  
+export const isPhoneNumber = (mobile) => {
 
-页面
+  let reg =
 
-```
-￼
-//
-```
+    /^1(3[0-9]|4[5,7]|5[0,1,2,3,5,6,7,8,9]|6[2,5,6,7]|7[0,1,7,8]|8[0-9]|9[1,8,9])\d{8}$/;
 
-判断是否是手机号
+  return reg.test(mobile);
 
-```
-￼
-export
- 
-const
- 
-isPhoneNumber
- 
-=
- (
-mobile
-) 
-=>
- {
-```
-
-```
-  
-let
- 
-reg
- 
-=
-```
-
-```
-    
-/
-^
-1(3
-[0-9]
-|
-4
-[5,7]
-|
-5
-[0,1,2,3,5,6,7,8,9]
-|
-6
-[2,5,6,7]
-|
-7
-[0,1,7,8]
-|
-8
-[0-9]
-|
-9
-[1,8,9]
-)
-\d
-{8}
-$
-/
-;
-```
-
-```
-  
-return
- 
-reg
-.
-test
-(
-mobile
-);
-```
-
-```
-};
-```
-
-```
-//
-```
-
-判断是否是身份证
-
-```
-export
- 
-const
- 
-isCardNo
- 
-=
- (
-card
-) 
-=>
- {
-```
-
-```
-  
-let
- 
-reg
- 
-=
-```
-
-```
-    
-/
-^
-[1-9]
-\d
-{5}[1-9]
-\d
-{3}
-((0
-\d
-)
-|
-(1
-[0-2]
-))((
-[0|1|2]
-\d
-)
-|
-3
-[0-1]
-)
-\d
-{3}
-(
-[0-9]
-|
-X)
-$
-/
-;
-```
-
-```
-  
-return
- 
-reg
-.
-test
-(
-card
-);
-```
-
-```
-};
-```
-
-```
-//
-```
-
-手机号中间隐藏
-
-```
-export
- 
-const
- 
-mobileEncrypt
- 
-=
- (
-mobile
-) 
-=>
- {
-```
-
-```
-  
-mobile
- 
-=
- 
-mobile
- 
-+
- 
-""
-;
-```
-
-```
-  
-return
- 
-`+86
-${
-mobile
-.
-replace
-(
-/
-(
-\d
-{3}
-)
-\d
-*
-(
-\d
-{4}
-)
-/
-, 
-`$1 **** $2`
-)
-}
-`
-;
-```
-
-```
 };
 
+//判断是否是身份证
 
+export const isCardNo = (card) => {
+
+  let reg =
+
+    /^[1-9]\d{5}[1-9]\d{3}((0\d)|(1[0-2]))(([0|1|2]\d)|3[0-1])\d{3}([0-9]|X)$/;
+
+  return reg.test(card);
+
+};
+
+//手机号中间隐藏
+
+export const mobileEncrypt = (mobile) => {
+
+  mobile = mobile + "";
+
+  return `+86${mobile.replace(/(\d{3})\d*(\d{4})/, `$1 **** $2`)}`;
+
+};
 
 ```
 
 Vue
 
-```
-import
- { 
-mobileEncrypt
- } 
-from
- 
-"@/utils/reg.js"
-;
-```
+```js
+import { mobileEncrypt } from "@/utils/reg.js";
 
-```
-userMobilePhone
- 
-=
- 
-mobileEncrypt
-(
-userMobilePhone
-);
-
-
+userMobilePhone = mobileEncrypt(userMobilePhone);
 ```
