--- a/开发笔记/数字转汉字.md
+++ b/开发笔记/数字转汉字.md
@@ -1,695 +1,113 @@
-```
-// 
-```
+```js
+// 数字转汉字
 
-_数字转汉字_
+    toChinesNum(num) {
 
-```
-    
-toChinesNum
-(
-num
-) {
-```
+      let changeNum = [
 
-```
-      
-let
- 
-changeNum
- 
-=
- [
-```
+        '零',
 
-```
-        
-'
-```
+        '一',
 
-零
+        '二',
 
-```
-'
-,
-```
+        '三',
 
-```
-        
-'
-```
+        '四',
 
-一
+        '五',
 
-```
-'
-,
-```
+        '六',
 
-```
-        
-'
-```
+        '七',
 
-二
+        '八',
 
-```
-'
-,
-```
+        '九'
 
-```
-        
-'
-```
-
-三
-
-```
-'
-,
-```
-
-```
-        
-'
-```
-
-四
-
-```
-'
-,
-```
-
-```
-        
-'
-```
-
-五
-
-```
-'
-,
-```
-
-```
-        
-'
-```
-
-六
-
-```
-'
-,
-```
-
-```
-        
-'
-```
-
-七
-
-```
-'
-,
-```
-
-```
-        
-'
-```
-
-八
-
-```
-'
-,
-```
-
-```
-        
-'
-```
-
-九
-
-```
-'
-```
-
-```
       ]
-```
 
-```
-      
-let
- 
-unit
- 
-=
- [
-''
-, 
-'
-```
+      let unit = ['', '十', '百', '千', '万']
 
-十
+      num = parseInt(num)
 
-```
-'
-, 
-'
-```
+      let getWan = temp => {
 
-百
+        let strArr = temp.toString().split('').reverse()
 
-```
-'
-, 
-'
-```
+        let newNum = ''
 
-千
+        let newArr = []
 
-```
-'
-, 
-'
-```
+        strArr.forEach((item, index) => {
 
-万
+          newArr.unshift(
 
-```
-'
-]
-```
+            item === '0' ? changeNum[item] : changeNum[item] + unit[index]
 
-```
-      
-num
- 
-=
- 
-parseInt
-(
-num
-)
-```
-
-```
-      
-let
- 
-getWan
- 
-=
- 
-temp
- 
-=>
- {
-```
-
-```
-        
-let
- 
-strArr
- 
-=
- 
-temp
-.
-toString
-().
-split
-(
-''
-).
-reverse
-()
-```
-
-```
-        
-let
- 
-newNum
- 
-=
- 
-''
-```
-
-```
-        
-let
- 
-newArr
- 
-=
- []
-```
-
-```
-        
-strArr
-.
-forEach
-((
-item
-, 
-index
-) 
-=>
- {
-```
-
-```
-          
-newArr
-.
-unshift
-(
-```
-
-```
-            
-item
- 
-===
- 
-'0'
- 
-?
- 
-changeNum
-[
-item
-] 
-:
- 
-changeNum
-[
-item
-] 
-+
- 
-unit
-[
-index
-]
-```
-
-```
           )
-```
 
-```
         })
-```
 
-```
-        
-let
- 
-numArr
- 
-=
- []
-```
+        let numArr = []
 
-```
-        
-newArr
-.
-forEach
-((
-m
-, 
-n
-) 
-=>
- {
-```
+        newArr.forEach((m, n) => {
 
-```
-          
-if
- (
-m
- 
-!==
- 
-'
-```
+          if (m !== '零') numArr.push(n)
 
-零
-
-```
-'
-) 
-numArr
-.
-push
-(
-n
-)
-```
-
-```
         })
-```
 
-```
-        
-if
- (
-newArr
-.
-length
- 
->
- 
-1
-) {
-```
+        if (newArr.length > 1) {
 
-```
-          
-newArr
-.
-forEach
-((
-m
-, 
-n
-) 
-=>
- {
-```
+          newArr.forEach((m, n) => {
 
-```
-            
-if
- (
-newArr
-[
-newArr
-.
-length
- 
--
- 
-1
-] 
-===
- 
-'
-```
+            if (newArr[newArr.length - 1] === '零') {
 
-零
+              if (n <= numArr[numArr.length - 1]) {
 
-```
-'
-) {
-```
+                newNum += m
 
-```
-              
-if
- (
-n
- 
-<=
- 
-numArr
-[
-numArr
-.
-length
- 
--
- 
-1
-]) {
-```
-
-```
-                
-newNum
- 
-+=
- 
-m
-```
-
-```
               }
-```
 
-```
-            } 
-else
- {
-```
+            } else {
 
-```
-              
-newNum
- 
-+=
- 
-m
-```
+              newNum += m
 
-```
             }
-```
 
-```
           })
-```
 
-```
-        } 
-else
- {
-```
+        } else {
 
-```
-          
-newNum
- 
-=
- 
-newArr
-[
-0
-]
-```
+          newNum = newArr[0]
 
-```
         }
-```
 
-```
-        
-if
- (
-newNum
- 
-==
- 
-'
-```
+        if (newNum == '一十') return '十'
 
-一十
+        if (newNum.length == 3) {
 
-```
-'
-) 
-return
- 
-'
-```
+          return newNum.replace('一十', '十')
 
-十
+        } else {
 
-```
-'
-```
+          return newNum
 
-```
-        
-if
- (
-newNum
-.
-length
- 
-==
- 
-3
-) {
-```
-
-```
-          
-return
- 
-newNum
-.
-replace
-(
-'
-```
-
-一十
-
-```
-'
-, 
-'
-```
-
-十
-
-```
-'
-)
-```
-
-```
-        } 
-else
- {
-```
-
-```
-          
-return
- 
-newNum
-```
-
-```
         }
-```
 
-```
       }
-```
 
-```
-      
-let
- 
-overWan
- 
-=
- 
-Math
-.
-floor
-(
-num
- 
-/
- 
-10000
-)
-```
+      let overWan = Math.floor(num / 10000)
 
-```
-      
-let
- 
-noWan
- 
-=
- 
-num
- 
-%
- 
-10000
-```
+      let noWan = num % 10000
 
-```
-      
-if
- (
-noWan
-.
-toString
-().
-length
- 
-<
- 
-4
-) {
-```
+      if (noWan.toString().length < 4) {
 
-```
-        
-noWan
- 
-=
- 
-'0'
- 
-+
- 
-noWan
-```
+        noWan = '0' + noWan
 
-```
       }
-```
 
-```
-      
-return
- 
-overWan
- 
-?
- 
-getWan
-(
-overWan
-) 
-+
- 
-'
-```
+      return overWan ? getWan(overWan) + '万' + getWan(noWan) : getWan(num)
 
-万
-
-```
-'
- 
-+
- 
-getWan
-(
-noWan
-) 
-:
- 
-getWan
-(
-num
-)
-```
-
-```
     }
 ```
