--- a/学习/前端学习/前端基础.md
+++ b/学习/前端学习/前端基础.md
@@ -1,23 +1,20 @@
-1. 如何做分支管理，代码协作的流程
+#### 如何做分支管理，代码协作的流程
 
-2. Vue 是如何实现响应式数据的？
+#### Vue 是如何实现响应式数据的？
 
-3. Vue中如何检测数组变化的呢？
+#### Vue中如何检测数组变化的呢？
 
-4. 为什么 Vue 中 data 必须是一个函数呢？
+#### 为什么 Vue 中 data 必须是一个函数呢？
 
 如果data是⼀个函数的话，这样每复⽤⼀次组件，就会返回⼀份新的data，类似于给每个组件实例创建⼀个私有的数据空 间，让各个组件实例维护各⾃的数据。⽽单纯的写成对象形式，就使得所有组件实例共⽤了⼀份data，就会造成⼀个变了全 都会变的结果。 所以说vue组件的data必须是函数。这都是因为js的特性带来的，跟vue本身设计⽆关。
   
+#### v-for 为什么要加 key
 
-5. v-for 为什么要加 key
+#### 谈一下对 vuex 的个人理解
 
-6. 谈一下对 vuex 的个人理解
+#### keep-alive 使用场景和原理
 
-7. keep-alive 使用场景和原理
-
-8. computed和watch有什么区别?
-
-  
+#### computed和watch有什么区别?
 
 1、功能上：computed是计算属性，watch是监听一个值的变化，然后执行对应的回调。
 
@@ -30,33 +27,31 @@
 5、使用场景：computed----当一个属性受多个属性影响的时候，使用computed-----购物车商品结算。watch–当一条数据影响多条数据的时候，使用watch-----搜索框.
 
   
+#### Vue-router 有哪些路由模式？
 
-9. Vue-router 有哪些路由模式？
+#### 用过事件修饰符吗？如果我定义 @click.once，这个事件会怎么处理呢？
 
-10. 用过事件修饰符吗？如果我定义@click.once，这个事件会怎么处理呢？
+#### 你对 Vue 项目进行过哪些优化呢？
 
-11. 你对 Vue 项目进行过哪些优化呢？
+#### Vue3.0 哪些特性你了解过
 
-12. Vue3.0 哪些特性你了解过
+#### 说说你使用 Vue 框架踩过最大的坑是什么？怎么解决的
 
-13. 说说你使用 Vue 框架踩过最大的坑是什么？怎么解决的
+#### 简述微信小程序原理
 
-14. 简述微信小程序原理
+#### 小程序的双向绑定与 vue 有哪些不同呢？
 
-15. 小程序的双向绑定与 vue 有哪些不同呢？
+#### 小程序页面间有哪些传递数据的方法
+#### 简单描述下微信小程序的相关文件类型
 
-16. 小程序页面间有哪些传递数据的方法
+#### 简述伪类和伪元素
 
-17. 简单描述下微信小程序的相关文件类型
+#### 什么是防抖和节流？有什么区别？如何实现？
 
-18. 简述伪类和伪元素
+#### 跨域问题如何解决
 
-19. 什么是防抖和节流？有什么区别？如何实现？
+#### webpack 中 loader 和 plugin 的区别是什么？
 
-20. 跨域问题如何解决
+#### git rebase 和 merge 的区别
 
-21. webpack 中 loader 和 plugin 的区别是什么？
-
-22. git rebase 和 merge 的区别
-
-23. flutter 的实现原理？
+#### flutter 的实现原理？
